bluec-tests/tests/invalid/typedef/return_function_type.c
typedef float MyFun(double);
MyFun test(void);

int main(void) {
    return 0;
}